<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EBusiness</string>
    <string name="action_buy">立即购买</string>
    <string name="action_submit">提交订单</string>
    <string name="action_cart">加入购物车</string>
    <string name="action_search">搜索</string>
    <string name="action_delete">删除</string>
    <string name="action_alter">修改</string>
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_logout">退出登录</string>
    <string name="action_loading_en">Loading....</string>

    <!-- main -->
    <string name="hot_product">热门推荐</string>
    <string name="about">关于厂家</string>
    <string name="home">首页</string>
    <string name="price">￥ %1$s</string>

    <!-- 分类 -->
    <string name="cate">分类</string>

    <!-- mine -->
    <string name="mine">我的</string>
    <string name="mine_hint1">我的订单</string>
    <string name="mine_hint2">密码修改</string>
    <string name="mine_hint3">意见反馈</string>
    <string name="mine_hint4">收货地址</string>
    <string name="mine_hint5">版本更新</string>

    <!-- 商品详情 -->
    <string name="detail">商品详情</string>
    <string name="detail_hint1">品牌</string>
    <string name="detail_hint2">型号规格</string>
    <string name="detail_hint3">耐碱性描述</string>
    <string name="detail_hint4">遮盖力描述</string>
    <string name="detail_hint5">计量单位</string>
    <string name="detail_hint6">颜色</string>
    <string name="detail_hint7">耐洗擦性</string>
    <string name="detail_hint8">耐水性</string>
    <string name="detail_hint9">保质期</string>
    <string name="detail_hint10">干燥时间</string>
    <string name="detail_hint">-</string>

    <!-- 提交订单 -->
    <string name="submit_hint1">应付金额</string>

    <!-- dialog参数 -->
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancle">取消</string>

    <!-- 购物车 -->
    <string name="cart">购物车</string>
    <string name="cart_hint1">全选</string>
    <string name="cart_hint2">提交</string>
    <string name="cart_hint3">合计: </string>
    <string name="cart_err1">请至少选择一件商品</string>
    <string name="cart_hint4">删除成功</string>

    <!-- 我的订单 -->
    <string name="myorder">我的订单</string>

    <!-- 订单详情 -->
    <string name="orderdetail">订单详情</string>

    <!-- 新增收货地址 -->
    <string name="add_add_hint1">收件人</string>
    <string name="add_add_hint2">手机号码</string>
    <string name="add_add_hint3">邮政编码</string>
    <string name="add_add_hint4">省市区</string>
    <string name="add_add_hint5">详细地址</string>
    <string name="add_add_hint6">保存</string>

    <!-- 登录 -->
    <string name="login_hint1">手机号</string>
    <string name="login_hint2">请输入密码（6-16个字符）</string>
    <string name="login_hint3">记住密码</string>
    <string name="login_hint4">免费注册</string>
    <string name="login_hint5">忘记密码?</string>
    <string name="login_hint6">登录</string>

    <!-- 注册 -->
    <string name="get_code_hint1">请输入手机号码（11位）</string>
    <string name="get_code_hint2">请输入短信验证码</string>
    <string name="get_code_hint3">获取验证码</string>
    <string name="get_code_hint4">（请在60秒内完成验证，超时请点击重新发送）</string>
    <string name="get_code_hint5">我同意</string>
    <string name="get_code_hint6">《xxxx注册协议》</string>
    <string name="get_code_hint7">下一步</string>
    <string name="get_code_hint8">注册</string>

    <!-- 找回密码 -->
    <string name="password_hint1">请输入密码（6-16个字符）</string>
    <string name="password_hint2">请再次输入密码</string>
    <string name="password_hint3">请输入您的身份证号码</string>

    <!-- 修改密码 -->
    <string name="alter_password_hint1">密码修改</string>
    <string name="alter_password_hint2">原始密码:</string>
    <string name="alter_password_hint3">请输入您的原始密码</string>
    <string name="alter_password_hint4">6-16个字符</string>
    <string name="alter_password_hint5">新密码:</string>
    <string name="alter_password_hint6">确认新密码:</string>
    <string name="alter_password_hint7">确定</string>

    <!-- 收货地址 -->
    <string name="address_hint1">修改</string>
    <string name="address_hint2">新增收货地址</string>
    <string name="address_hint3">暂无收货地址</string>
</resources>

